Ejercicio 4 - Arreglar error

--- a/0_Practica_Recursion.ipynb
+++ b/0_Practica_Recursion.ipynb
@@ -192,7 +192,7 @@
         "id": "NcFbTBst0k9h"
       },
       "source": [
-        "**Ejercicio 3** Escribir una función recursiva que reciba un número positivo n y devuelva la cantidad de dígitos que tiene."
+        "## **Ejercicio 3** Escribir una función recursiva que reciba un número positivo n y devuelva la cantidad de dígitos que tiene."
       ]
     },
     {
