Arreglar error: No evalua el ultimmo elemento de la lista

--- a/0_Practica_Recursion.ipynb
+++ b/0_Practica_Recursion.ipynb
@@ -320,6 +320,84 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Problema: No evalua el ultimo elemento de la cadena"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 35,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "100"
+            ]
+          },
+          "execution_count": 35,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "def recursion_4(list, n = 0, mayor = list[0]):\n",
+        "  if n == (len(list) - 1):\n",
+        "    return mayor\n",
+        "  else:\n",
+        "    if mayor < list[n]:\n",
+        "      mayor = list[n]\n",
+        "  return recursion_4(list, n + 1, mayor)\n",
+        "\n",
+        "list = [2,5,82,100,6,30,2]\n",
+        "recursion_4(list)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 36,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "1000"
+            ]
+          },
+          "execution_count": 36,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "list = [0,5,82,100,6,30,1000,2]\n",
+        "recursion_4(list)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 38,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "100"
+            ]
+          },
+          "execution_count": 38,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "list = [0,5,82,100,6,30]\n",
+        "recursion_4(list)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "iwkC8qNp1MLv"
       },
