--- a/0_Practica_Recursion.ipynb
+++ b/0_Practica_Recursion.ipynb
@@ -319,15 +319,21 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "execution_count": 1,
       "metadata": {},
+      "outputs": [],
       "source": [
-        "Problema: No evalua el ultimo elemento de la cadena"
+        "def recursion_4(lista):\n",
+        "    if len(lista) == 1:\n",
+        "        return lista[0]\n",
+        "    else:\n",
+        "        return max(lista[0], recursion_4(lista[1:]))\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -336,64 +342,35 @@
               "100"
             ]
           },
-          "execution_count": 35,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "def recursion_4(list, n = 0, mayor = list[0]):\n",
-        "  if n == (len(list) - 1):\n",
-        "    return mayor\n",
-        "  else:\n",
-        "    if mayor < list[n]:\n",
-        "      mayor = list[n]\n",
-        "  return recursion_4(list, n + 1, mayor)\n",
-        "\n",
-        "list = [2,5,82,100,6,30,2]\n",
-        "recursion_4(list)"
+        "lista = [2,5,82,100,6,30,2]\n",
+        "recursion_4(lista)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "1000"
+              "2000"
             ]
           },
-          "execution_count": 36,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "list = [0,5,82,100,6,30,1000,2]\n",
-        "recursion_4(list)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 38,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "100"
-            ]
-          },
-          "execution_count": 38,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "list = [0,5,82,100,6,30]\n",
-        "recursion_4(list)"
+        "lista = [2,5,82,100,6,30,2,2000]\n",
+        "recursion_4(lista)"
       ]
     },
     {
@@ -402,13 +379,20 @@
         "id": "iwkC8qNp1MLv"
       },
       "source": [
-        "**Ejercicio 5** Escribir una función recursiva que reciba 2 enteros n y b y devuelva True si n es potencia de b.\n",
+        "## **Ejercicio 5** Escribir una función recursiva que reciba 2 enteros n y b y devuelva True si n es potencia de b.\n",
         "\n",
         "**Ejemplos**:\n",
         "- es_potencia(8, 2) -> True\n",
         "- es_potencia(64, 4) -> True\n",
         "- es_potencia(70, 10) -> False"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -418,6 +402,62 @@
       "source": [
         "**Ejercicio 6** Escribir una función recursiva para replicar los elementos de una lista una cantidad n de veces. Por ejemplo:\n",
         "- replicar([1, 3, 3, 7], 2) -> ([1, 1, 3, 3, 3, 3, 7, 7])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Arreglar error"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def replicar(lista, num, lista_nueva = []):\n",
+        "  if len(lista) == 0: \n",
+        "    return print(lista_nueva)\n",
+        "  lista_nueva.extend([lista[0]] * num)\n",
+        "  return replicar(lista [1:], num)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 1, 3, 3, 3, 3, 7, 7]\n"
+          ]
+        }
+      ],
+      "source": [
+        "lista = [1, 3, 3, 7]\n",
+        "replicar(lista, 2)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 1, 3, 3, 3, 3, 7, 7]\n"
+          ]
+        }
+      ],
+      "source": [
+        "lista_2 = [1, 3, 3, 7]\n",
+        "replicar(lista_2, 0)"
       ]
     },
     {
