--- a/0_Practica_Recursion.ipynb
+++ b/0_Practica_Recursion.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -45,7 +45,7 @@
               "1"
             ]
           },
-          "execution_count": 30,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -54,8 +54,9 @@
         "def recursion_1(num):   \n",
         "    if num == 1:\n",
         "       return num\n",
-        "    print(num)\n",
-        "    return recursion_1(num - 1)\n",
+        "    else: \n",
+        "        print(num)\n",
+        "        return recursion_1(num - 1)\n",
         "\n",
         "recursion_1(5)"
       ]
@@ -80,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -88,29 +89,19 @@
         "id": "4yRzr0Zy98vJ",
         "outputId": "e5b72278-9c97-4957-c428-4f01734d3406"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "execution_count": 27,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "def recursion_2(num, triangular = 1):\n",
         "    if num == 1:\n",
         "        return triangular \n",
-        "    triangular = triangular + num      \n",
-        "    return recursion_2(num - 1, triangular)"
+        "    else:\n",
+        "        triangular = triangular + num      \n",
+        "        return recursion_2(num - 1, triangular)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -125,7 +116,7 @@
               "3"
             ]
           },
-          "execution_count": 28,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -136,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -151,7 +142,7 @@
               "15"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -162,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -177,7 +168,7 @@
               "1"
             ]
           },
-          "execution_count": 30,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -197,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -205,13 +196,14 @@
         "  num = num // 10\n",
         "  if num < 1:\n",
         "    return cont\n",
-        "  cont += 1\n",
-        "  return recursion_3(num, cont)"
+        "  else: \n",
+        "    cont += 1\n",
+        "    return recursion_3(num, cont)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -220,7 +212,7 @@
               "1"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -231,7 +223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -240,7 +232,7 @@
               "1"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 24,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -251,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
@@ -260,7 +252,7 @@
               "2"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 25,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -271,7 +263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -280,7 +272,7 @@
               "3"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -291,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
         {
@@ -300,7 +292,7 @@
               "7"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 27,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -315,12 +307,12 @@
         "id": "LnoHH96w5Boy"
       },
       "source": [
-        "**Ejercicio 4** Escribir una funcion recursiva que encuentre el mayor elemento de una lista."
+        "## **Ejercicio 4** Escribir una funcion recursiva que encuentre el mayor elemento de una lista.  "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -333,7 +325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [
         {
@@ -342,7 +334,7 @@
               "100"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 29,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -354,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
@@ -363,7 +355,7 @@
               "2000"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 30,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -389,10 +381,78 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "def es_potencia(n, b, x = 0):\n",
+        "   if pow(b, x) > n:\n",
+        "     return False\n",
+        "   elif pow(b, x) == n:\n",
+        "     return True\n",
+        "   else: \n",
+        "      return es_potencia(n, b, x + 1) "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "es_potencia(8, 2)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "es_potencia(64, 4)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "es_potencia(70, 10) "
+      ]
     },
     {
       "cell_type": "markdown",
