--- a/0_Practica_Recursion.ipynb
+++ b/0_Practica_Recursion.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -45,7 +45,7 @@
               "1"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -116,7 +116,7 @@
               "3"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -142,7 +142,7 @@
               "15"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -153,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -168,7 +168,7 @@
               "1"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -203,7 +203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -212,7 +212,7 @@
               "1"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -223,7 +223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -232,7 +232,7 @@
               "1"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -243,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -252,7 +252,7 @@
               "2"
             ]
           },
-          "execution_count": 25,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -263,7 +263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -272,7 +272,7 @@
               "3"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -283,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -292,7 +292,7 @@
               "7"
             ]
           },
-          "execution_count": 27,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -312,7 +312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -325,7 +325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -334,7 +334,7 @@
               "100"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -346,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -355,7 +355,7 @@
               "2000"
             ]
           },
-          "execution_count": 30,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -381,7 +381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -396,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -405,7 +405,7 @@
               "True"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -416,7 +416,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -425,7 +425,7 @@
               "True"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -436,7 +436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
@@ -445,7 +445,7 @@
               "False"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -460,7 +460,7 @@
         "id": "3Xgvx8UH5oIZ"
       },
       "source": [
-        "**Ejercicio 6** Escribir una función recursiva para replicar los elementos de una lista una cantidad n de veces. Por ejemplo:\n",
+        "## **Ejercicio 6** Escribir una función recursiva para replicar los elementos de una lista una cantidad n de veces. Por ejemplo:\n",
         "- replicar([1, 3, 3, 7], 2) -> ([1, 1, 3, 3, 3, 3, 7, 7])"
       ]
     },
@@ -473,7 +473,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -486,7 +486,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -504,7 +504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -526,10 +526,88 @@
         "id": "9mXgr_gQRWiH"
       },
       "source": [
-        "**Ejercicio 7** Escriba una funcion que tome una lista y devuelva esa misma lista en orden inverso. Realice dos versiones:\n",
+        "## **Ejercicio 7** Escriba una funcion que tome una lista y devuelva esa misma lista en orden inverso. Realice dos versiones:\n",
         "\n",
         "* `reversaR` que resuelva utilizando recursión.\n",
         "* `reversaI` que resuelva utilizando iteración."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def reversaR(lista, lista_reversa = []):\n",
+        "  lista_reversa.append(lista[0])\n",
+        "  if len(lista) == 1: \n",
+        "    lista_reversa.reverse()\n",
+        "    return lista_reversa\n",
+        "  return reversaR(lista[1: ])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[7, 3, 3, 1]"
+            ]
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "lista = [1, 3, 3, 7]\n",
+        "reversaR(lista)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Funcion Iterativa"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def reversaI(lista):\n",
+        "    lista_reversa = []\n",
+        "    for elemento in lista:\n",
+        "        lista_reversa.append(elemento)\n",
+        "    lista_reversa.reverse()\n",
+        "    return lista_reversa\n",
+        "        "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[4, 3, 2, 1]"
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "lista = [1 , 2 , 3 , 4]\n",
+        "reversaI(lista)"
       ]
     },
     {
@@ -545,6 +623,16 @@
         "\n",
         "**Ayuda**\n",
         "- Puede ser de utilidad el método de `str.startswith` que nos dice si una cadena empieza con una subcadena dada. Puede leer mas sobre este método en la [documentacion oficial](https://docs.python.org/3/library/stdtypes.html?highlight=startswith#str.startswith) "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        " "
       ]
     },
     {
@@ -638,7 +726,7 @@
     },
     "vscode": {
       "interpreter": {
-        "hash": "7051500033a16f6c160bb9f5550ddf234d67bca67ecbbc2a0f566efe3f532574"
+        "hash": "cc2a200e1e6dab10c4dc3986f0e7a998296447c993c26561a1bd050a849d8214"
       }
     }
   },
