--- a/0_Practica_Recursion.ipynb
+++ b/0_Practica_Recursion.ipynb
@@ -465,91 +465,40 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Arreglar error"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def replicar(lista, num, lista_nueva = []):\n",
+        "def replicar(lista, num):\n",
+        "  \n",
         "  if len(lista) == 0: \n",
-        "    return print(lista_nueva)\n",
-        "  lista_nueva.extend([lista[0]] * num)\n",
-        "  return replicar(lista [1:], num)"
+        "    return [] \n",
+        "  m = replicar(lista [1:], num)\n",
+        "  m = [lista[0]] * num + m\n",
+        "  \n",
+        "  return m"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[1, 1, 3, 3, 3, 3, 7, 7]\n"
-          ]
+          "data": {
+            "text/plain": [
+              "[1, 1, 3, 3, 3, 3, 7, 7]"
+            ]
+          },
+          "execution_count": 32,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
         "lista = [1, 3, 3, 7]\n",
         "replicar(lista, 2)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 23,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[1, 1, 3, 3, 3, 3, 7, 7]\n"
-          ]
-        }
-      ],
-      "source": [
-        "lista_2 = [1, 3, 3, 7]\n",
-        "replicar(lista_2, 0)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Otra:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 24,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[1, 1, 1, 2, 2, 2, 3, 3, 3]\n"
-          ]
-        }
-      ],
-      "source": [
-        "def replica_otra(list,n):\n",
-        "    if n == 1 or 0:\n",
-        "        return list\n",
-        "    else:\n",
-        "        return list + replica_otra(list, n-1)\n",
-        "    \n",
-        "lista = replica_otra([1,2,3],3)\n",
-        "lista.sort()\n",
-        "print(lista)"
       ]
     },
     {
