--- a/PRACTICA_Arboles_(formato_ipynb).ipynb
+++ b/PRACTICA_Arboles_(formato_ipynb).ipynb
@@ -430,11 +430,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "dfwK9wiaTJ9r"
-      },
+      "metadata": {},
       "source": [
-        "**VER**"
+        "Versión Iterativa"
       ]
     },
     {
@@ -455,8 +453,6 @@
         "#   2    7    17    20\n",
         "#  / \\             /  \\\n",
         "# 1   3          19    22\n",
-        "\n",
-        "\n",
         "\n"
       ]
     },
@@ -506,68 +502,6 @@
         "\n",
         "treePreOrderI(tree)\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "iyjalnPnhPPH"
-      },
-      "source": [
-        "**Ejercicio 3**: En la práctica anterior mencionamos cómo utilizamos notación postfija de expresiones para evaluar en un Stack y sin usar paréntesis. Con árboles podemos representar expresiones infijas sin paréntesis. Cada nodo interno del árbol representa un operador, izquierda y derecha son subexpresiones, y las hojas son números. Implementar una clase Expression que herede de Tree, un árbol de expresiones infijas, con dos métodos.\n",
-        "\n",
-        "* **imprimir**: que imprime la expresión de forma infija con paréntesis.\n",
-        "* **evaluar**: evalúa todo el árbol y lo reduce a un número.\n",
-        "\n",
-        "Ejemplo\n",
-        "```\n",
-        "     *\n",
-        "   /   \\\n",
-        "  +     -     ==>   ((1 + 2) * (3 - 4))   ==>   -2\n",
-        " / \\   / \\\n",
-        "1   2 3   4\n",
-        "```"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BbQJzB43hPPH",
-        "outputId": "7e087c55-18b6-4288-ee39-bcbc5e523b24"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\n"
-          ]
-        }
-      ],
-      "source": [
-        "class Expression(Tree):\n",
-        "  def imprimir(self):\n",
-        "    ...\n",
-        "\n",
-        "  def evaluar(self):\n",
-        "    ...\n",
-        "\n",
-        "node1 = Expression(1)\n",
-        "node2 = Expression(2)\n",
-        "node3 = Expression(3)\n",
-        "node4 = Expression(4)\n",
-        "\n",
-        "suma = Expression(\"+\", node1, node2)\n",
-        "resta = Expression(\"-\", node3, node4)\n",
-        "mult = Expression(\"*\", suma, resta)\n",
-        "\n",
-        "mult.imprimir()\n",
-        "print(\"\")\n",
-        "mult.evaluar()"
       ]
     },
     {
